@@ -5,7 +5,7 @@ require_once(WWW_DIR."lib/framework/db.php");
 require_once(WWW_DIR."lib/tmux.php");
 require_once(WWW_DIR."lib/site.php");
 
-$version="0.1r2736";
+$version="0.1r2739";
 
 $db = new DB();
 $DIR = MISC_DIR;
@@ -352,7 +352,7 @@ while( $i > 0 )
 	if ( $i == 1 )
 	{
 		if ( @$proc_work_result[0]['nforemains'] != NULL ) { $nfo_remaining_start = $proc_work_result[0]['nforemains']; }
-		if ( @$proc_work_result[0]['predb'] != NULL ) { $predb_start = $proc_work_result[0]['predb']; }
+		if ( @$proc_work_result[0]['predb_matched'] != NULL ) { $predb_start = $proc_work_result[0]['predb_matched']; }
 		if ( @$proc_work_result[0]['console'] != NULL ) { $console_releases_proc_start = $proc_work_result[0]['console']; }
 		if ( @$proc_work_result[0]['movies'] != NULL ) { $movie_releases_proc_start = $proc_work_result[0]['movies']; }
 		if ( @$proc_work_result[0]['audio'] != NULL ) { $music_releases_proc_start = $proc_work_result[0]['audio']; }
@@ -472,7 +472,7 @@ while( $i > 0 )
 	if ( $i == 1 ) { $total_work_start = $total_work_now; }
 
 	$nfo_diff = number_format( $nfo_remaining_now - $nfo_remaining_start );
-	$pre_diff = number_format( $predb - $predb_start );
+	$pre_diff = number_format( $predb_matched - $predb_start );
 	$requestID_diff = number_format( $requestID_inprogress - $requestID_inprogress_start );
 
 	$console_diff = number_format( $console_releases_proc - $console_releases_proc_start );
